Converted to generic resource service
